Revert "new toml"
This reverts commit b3703cc34ce1b897192ad304f627d2eb4ed268e7.

--- a/notebooks/Project.toml
+++ b/notebooks/Project.toml
@@ -5,6 +5,9 @@ ColorTypes = "3da002f7-5984-5a60-b8a6-cbb66c0b333f"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
 Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
+DiffEqBase = "2b5f629d-d688-5b77-993f-72d75c75574e"
+DiffEqCallbacks = "459566f4-90b8-5000-8ac3-15dfb0a30def"
+DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Expectations = "2fe49d83-0758-5602-8f54-1f90ad0d522b"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
