--- a/source/rst/Project.toml
+++ b/source/rst/Project.toml
@@ -1,5 +1,5 @@
 name = "quantecon-notebooks-julia"
-authors = ["arnavs <soodarnav01@gmail.com>"]
+authors = ["arnavs <me@arnavsood.com>"]
 version = "0.9.10"
 
 [deps]
