--- a/source/rst/more_julia/Project.toml
+++ b/source/rst/more_julia/Project.toml
@@ -1,5 +1,5 @@
-name = "QuantEconLectureAllPackages"
-authors = ["arnavs <soodarnav01@gmail.com>"]
+name = "quantecon-notebooks-julia/more_julia"
+authors = ["arnavs <me@arnavsood.com>"]
 version = "0.9.10"
 
 [deps]
