first-round RST and TOML changes

--- a/source/rst/Project.toml
+++ b/source/rst/Project.toml
@@ -41,6 +41,7 @@ Query = "1a8c2f83-1ff3-5112-b086-8aa67b057ba1"
 Queryverse = "612083be-0b0f-5412-89c1-4e7c75506a58"
 RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+RegressionTables = "d519eb52-b820-54da-95a6-98e1306fdade"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
