--- a/source/rst/Project.toml
+++ b/source/rst/Project.toml
@@ -3,6 +3,7 @@ authors = ["arnavs <me@arnavsood.com>"]
 version = "0.1.0"
 
 [deps]
+BandedMatrices = "aae01518-5342-5314-be14-df237901396f"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 BlackBoxOptim = "a134a8b2-14d6-55f6-9291-3336d3ab0209"
 CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
@@ -22,6 +23,7 @@ GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
 GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
+IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 KernelDensity = "5ab0869b-81aa-558d-bb23-cbf5423bbe9b"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
@@ -45,6 +47,7 @@ RegressionTables = "d519eb52-b820-54da-95a6-98e1306fdade"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
 SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+SparseDiffTools = "47a9eef4-7e08-11e9-0b38-333d64bd3804"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
@@ -52,3 +55,4 @@ StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 VegaLite = "112f6efa-9a02-5b7d-90c0-432ed331239a"
+Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
