--- a/source/rst/Project.toml
+++ b/source/rst/Project.toml
@@ -27,6 +27,7 @@ Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 KernelDensity = "5ab0869b-81aa-558d-bb23-cbf5423bbe9b"
+Krylov = "ba0b0d4f-ebba-5204-a429-3ac8c609bfb7"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LeastSquaresOptim = "0fc2ff8b-aaa3-5acd-a817-1944a5e08891"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
