add Arpack to Project

--- a/source/rst/Project.toml
+++ b/source/rst/Project.toml
@@ -4,6 +4,7 @@ version = "0.3.0"
 
 [deps]
 ApproxFun = "28f2ccd6-bb30-5033-b560-165f7b14dc2f"
+Arpack = "7d9fca2a-8960-54d3-9f78-7d1dccf2cb97"
 BandedMatrices = "aae01518-5342-5314-be14-df237901396f"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 BlackBoxOptim = "a134a8b2-14d6-55f6-9291-3336d3ab0209"
