--- a/source/rst/Project.toml
+++ b/source/rst/Project.toml
@@ -1,8 +1,9 @@
 name = "quantecon-notebooks-julia"
 authors = ["arnavs <me@arnavsood.com>"]
-version = "0.3.0"
+version = "0.4.0"
 
 [deps]
+AlgebraicMultigrid = "2169fc97-5a83-5252-b627-83903c6c433c"
 ApproxFun = "28f2ccd6-bb30-5033-b560-165f7b14dc2f"
 Arpack = "7d9fca2a-8960-54d3-9f78-7d1dccf2cb97"
 BandedMatrices = "aae01518-5342-5314-be14-df237901396f"
@@ -25,12 +26,14 @@ Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
 GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
+IncompleteLU = "40713840-3770-5561-ab4c-a76e7d0d7895"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 KernelDensity = "5ab0869b-81aa-558d-bb23-cbf5423bbe9b"
 Krylov = "ba0b0d4f-ebba-5204-a429-3ac8c609bfb7"
+KrylovKit = "0b1a1467-8014-51b9-945f-bf0ae24f4b77"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LazyArrays = "5078a376-72f3-5289-bfd5-ec5146d43c02"
 LeastSquaresOptim = "0fc2ff8b-aaa3-5acd-a817-1944a5e08891"
