--- a/source/rst/Project.toml
+++ b/source/rst/Project.toml
@@ -47,6 +47,7 @@ Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Polynomials = "f27b6e38-b328-58d1-80ce-0feddd5e7a45"
+Preconditioners = "af69fa37-3177-5a40-98ee-561f696e4fcd"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 QuantEcon = "fcd29c91-0bd7-5a09-975d-7ac3f643a60c"
