--- a/source/rst/Project.toml
+++ b/source/rst/Project.toml
@@ -22,6 +22,7 @@ ExponentialUtilities = "d4d017d3-3776-5f7e-afef-a10c40355c18"
 FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
 FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
 FixedEffectModels = "9d5cd8c9-2029-5cab-9928-427838db53e3"
+FixedEffects = "c8885935-8500-56a7-9867-7708b20db0eb"
 Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
