--- a/source/rst/Project.toml
+++ b/source/rst/Project.toml
@@ -16,6 +16,7 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
 DataVoyager = "5721bf48-af8e-5845-8445-c9e18126e773"
 Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
+DiffEqOperators = "9fdde737-9c7f-55bf-ade8-46b3f136cc48"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Expectations = "2fe49d83-0758-5602-8f54-1f90ad0d522b"
 Expokit = "a1e7a1ef-7a5d-5822-a38c-be74e1bb89f4"
@@ -46,6 +47,7 @@ LinearOperators = "5c8ed15e-5a4c-59e4-a42b-c7e8811fb125"
 NLopt = "76087f3c-5699-56af-9a33-bf431cd00edd"
 NLsolve = "2774e3e8-f4cf-5e23-947b-6d7e65073b56"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
+OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 PkgTemplates = "14b8a8f1-9102-5b29-a752-f990bacb7fe1"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
