--- a/source/rst/Project.toml
+++ b/source/rst/Project.toml
@@ -1,6 +1,6 @@
 name = "quantecon-notebooks-julia"
 authors = ["arnavs <me@arnavsood.com>"]
-version = "0.4.0"
+version = "0.5.0"
 
 [deps]
 AlgebraicMultigrid = "2169fc97-5a83-5252-b627-83903c6c433c"
@@ -30,6 +30,7 @@ ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
 GR = "28b8d3ca-fb5f-59d9-8090-bfdbd6d07a71"
 IncompleteLU = "40713840-3770-5561-ab4c-a76e7d0d7895"
+InstantiateFromURL = "43edad99-fa64-5e4f-9937-1c09a410b73f"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
