--- a/source/rst/Project.toml
+++ b/source/rst/Project.toml
@@ -14,7 +14,6 @@ CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
 Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
-DataVoyager = "5721bf48-af8e-5845-8445-c9e18126e773"
 Dierckx = "39dd38d3-220a-591b-8e3c-4c3a8c710a94"
 DiffEqOperators = "9fdde737-9c7f-55bf-ade8-46b3f136cc48"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
@@ -72,5 +71,6 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 VegaLite = "112f6efa-9a02-5b7d-90c0-432ed331239a"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
