--- a/source/rst/Project.toml
+++ b/source/rst/Project.toml
@@ -70,6 +70,7 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
+StochasticDiffEq = "789caeaf-c7a9-5a7d-9973-96adeb23e2a0"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 VegaLite = "112f6efa-9a02-5b7d-90c0-432ed331239a"
