Plotting tweaks with labels, etc.

--- a/source/rst/Project.toml
+++ b/source/rst/Project.toml
@@ -61,6 +61,7 @@ QuantEcon = "fcd29c91-0bd7-5a09-975d-7ac3f643a60c"
 Query = "1a8c2f83-1ff3-5112-b086-8aa67b057ba1"
 RDatasets = "ce6b1742-4840-55fa-b093-852dadbb1d8b"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+RecursiveArrayTools = "731186ca-8d62-57ce-b412-fbd966d074cd"
 RegressionTables = "d519eb52-b820-54da-95a6-98e1306fdade"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 Roots = "f2b01f46-fcfa-551c-844a-d8ac1e96c665"
